# midynet

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  __pyproject.toml  __setup.cfg  clear-pybinder.bash  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  todo.md  work-plan.md
_midynet/: .gitmodules  CMakeLists.txt
_midynet/SamplableSet/src/: CMakeLists.txt
_midynet/include/FastMIDyNet/: exceptions.h  generators.h  rng.h  rv.hpp  types.h
_midynet/include/FastMIDyNet/data/: data_model.hpp  util.h
_midynet/include/FastMIDyNet/dynamics/: binary_dynamics.h  binary_dynamics.hpp  cowan.h  cowan.hpp  degree.h  degree.hpp  dynamics.h  dynamics.hpp  glauber.h  glauber.hpp  ising-glauber.h  sis.h  sis.hpp  types.h
_midynet/include/FastMIDyNet/mcmc/: community.hpp  dynamics_mcmc.h  dynamics_mcmc.hpp  graph.hpp  graph_mcmc.h  graph_mcmc.hpp  mcmc.h  reconstruction.hpp
_midynet/include/FastMIDyNet/prior/: prior.hpp
_midynet/include/FastMIDyNet/proposer/: movetypes.h  (+5 more)
_midynet/pybind_wrapper/: init_generator.h  pybind_main.cpp
_midynet/pybind_wrapper/data/: init.h  init_dynamics.h
_midynet/pybind_wrapper/dynamics/: init.h  init_dynamics.h
_midynet/pybind_wrapper/mcmc/: init.h  init_actions.h  init_callbacks.h  init_collectors.h  init_mcmc.h  init_verbose.h
_midynet/pybind_wrapper/prior/: init_prior.h
_midynet/pybind_wrapper/proposer/: init.h  init_blockproposer.h  init_edge.h  init_edgeproposer.h  init_edgesampler.h  init_label.h  init_movetypes.h  init_proposer.h  init_sampler.h  init_vertexsampler.h
_midynet/pybind_wrapper/random_graph/: init.h  init_configuration.h  init_dcsbm.h  init_erdosrenyi.h  init_hdcsbm.h  init_hsbm.h  init_randomgraph.h  init_sbm.h
_midynet/pybind_wrapper/utility/: init_distance.h  init_functions.h  init_integerpartition.h  init_maps.h  init_utility.h
_midynet/src/: CMakeLists.txt  generators.cpp  rng.cpp  rv.cpp
_midynet/src/data/: data_model.cpp
_midynet/src/dynamics/: binary_dynamics.cpp  cowan.cpp  degree.cpp  dynamics.cpp  glauber.cpp  ising-glauber.cpp  sis.cpp
_midynet/src/mcmc/: community.cpp  dynamics_mcmc.cpp  graph.cpp  graph_mcmc.cpp  mcmc.cpp  reconstruction.cpp
_midynet/src/proposer/: edge_sampler.cpp  label_sampler.cpp  vertex_sampler.cpp
_midynet/src/random_graph/: dcsbm.cpp  hdcsbm.cpp  hsbm.cpp  likelihood.cpp  random_graph.cpp  sbm.cpp  util.cpp
_midynet/src/utility/: distance.cpp  functions.cpp  integer_partition.cpp
_midynet/tests/: CMakeLists.txt  fixtures.cpp  fixtures.hpp
_midynet/tests/test_data/: test_cowan.cpp  test_degree.cpp  test_dynamics.cpp  test_glauber.cpp  test_sis.cpp
_midynet/tests/test_dynamics/: fixtures.hpp  test_cowan.cpp  test_degree.cpp  test_dynamics.cpp  test_glauber.cpp  test_ising-glauber.cpp  test_sis.cpp
_midynet/tests/test_generators/: test_composition_and_partition_generators.cpp  test_graph_generators.cpp
_midynet/tests/test_mcmc/: fixtures.hpp  test_callbacks.cpp  test_community.cpp  test_dynamicsmcmc.cpp  test_graph.cpp  test_graphmcmc.cpp  test_mcmc.cpp  test_reconstruction.cpp
_midynet/tests/test_priors/: test_block.cpp  test_blockcount.cpp  test_degree.cpp  test_degreecount.cpp  test_edgecount.cpp  test_edgematrix.cpp  test_label_graph.cpp  test_labeled_degree.cpp  test_nested_blocks.cpp  test_nested_label_graph.cpp  test_prior.cpp  test_vertexcount.cpp  test_vertexlabeled_degree.cpp
_midynet/tests/test_proposers/: _test_label_sampler.cpp  _test_labeled_double_edge_swap.cpp  _test_labeled_hinge_flip.cpp  fixtures.hpp  test_double_edge_swap.cpp  test_edge_sampler.cpp  test_hinge_flip.cpp  test_label_sampler.cpp  test_labeled_double_edge_swap.cpp  test_labeled_hinge_flip.cpp  test_mixed_blocks.cpp  test_multiplemoves.cpp  test_nested_mixed_blocks.cpp  test_nested_uniform_blocks.cpp  test_peixoto_blocks.cpp  test_single_edge.cpp  test_uniform_blocks.cpp  test_vertex_sampler.cpp
_midynet/tests/test_randomgraph/: fixtures.hpp  test_configuration.cpp  test_dcsbm.cpp  test_erdosrenyi.cpp  test_hdcsbm.cpp  test_hsbm.cpp  test_randomgraph.cpp  test_sbm.cpp  test_stublabeled_sbm.cpp  test_uniform_sbm.cpp
_midynet/tests/test_utility/: test_integer_partition.cpp  test_maps.cpp
tests/: CMakeLists.txt  __init__.py  all.py  test_backend.py  test_statistics.py
tests/config/: __init__.py  all.py  test_config.py  test_factory.py  test_parameter.py  test_wrapper.py
tests/experiments/: __init__.py  _test_experiment.py  all.py  test_experiment.py
tests/metrics/: __init__.py  metrics.pickle  test_dynamics_entropy.py  test_generic.py  test_metrics.py  test_util.py
tests/misc/: agglomerative_clustering.py  block_proposer_validity.py  community.py  comparison_with_slow.py  convergence.py  edge_proposer_validity.py  heuristics.py  mcmc_annealed.py  mcmc_meanfield.py  meanfield_community.py  partition_entropy.py  partition_sampling.py  time_it.py
tests/scripts/: __init__.py  _test_script.py  test_script.py
tests/test_dynamics/: fixtures.hpp  test_SIS_dynamics.cpp  test_degree.cpp  test_degree_dynamics.cpp  test_dynamics.cpp  test_ising-glauber.cpp  test_sis.cpp  test_wilson_cowan.cpp
tests/test_generators/: test_composition_and_partition_generators.cpp  test_graph_generators.cpp
tests/test_mcmc/: test_dynamicsmcmc.cpp  test_graphmcmc.cpp  test_mcmc.cpp
tests/test_priors/: fixtures.hpp  test_block.cpp  test_blockcount.cpp  test_degree.cpp  test_degreecount.cpp  test_edgecount.cpp  test_edgecount_poisson.cpp  test_edgematrix.cpp  test_prior.cpp  test_vertexcount.cpp
tests/test_proposers/: fixtures.hpp  test_block_preserving_edge_proposer.cpp  test_double_edge_swap.cpp  test_hinge_flip.cpp  test_multiplemoves.cpp  test_peixoto_blocks.cpp  test_single_edge.cpp  test_single_edge_move.cpp  test_uniform_blocks.cpp
tests/test_randomgraph/: fixtures.hpp  test_configuration.cpp  test_dcsbm.cpp  test_erdosrenyi.cpp  test_randomgraph.cpp  test_sbm.cpp
tests/test_utility/: test_maps.cpp  test_utility.cpp
tests/util/: __init__.py  all.py  convergence.py  test_convergence.py  test_utilities.py
tests/utility/: test_utility.py
(+640 files in other folders)
