[metadata]
name = midynet
author = Charles Murphy
author_email = charles.murphy.1@ulaval.ca
url = https://github.com/charlesmurphy1/fast-midynet
license = MIT
description = A package for the analysis of stochastic processes on random graphs.
platforms = linux, osx

[options]
packages = midynet
setup_requires = pybind11>=2.3
install_requires =
    pybind11>=2.3
    numpy>=1.20.3
    scipy>=1.7.1
    psutil>=5.8.0
    tqdm>=4.56.0
    basegraph==1.0.0
    SamplableSet>=2.0.0
python_requires = >=3.6
zip_safe = no

[options.extras_require]
full =
    networkx>=2.5
    netrd>=0.3.0
    graph_tool>=2.37
testing =
    flake8>=3.9.0
    pytest>=6.2.3
